feat: Implement Discord webhook management system
- Create DiscordWebhookManager for high-performance messaging
- Add webhook URL management and HTTP-based message sending
- Implement fallback to bot messaging when webhooks fail
- Add comprehensive webhook validation and error handling
- Support configuration hot-reloading and webhook testing
- Thread-safe implementation with proper resource cleanup
- Satisfies requirements 2.5, 2.6, 9.1, 9.2

Task 5 completed: Webhook management system fully implemented